test/compile_errors/stage1/obj/assign_to_constant_variable.zig
export fn f() void {
    const a = 3;
    a = 4;
}

// assign to constant variable
//
// tmp.zig:3:9: error: cannot assign to constant
